[package]
name = "sofie-rust-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"protected-id-derive" = "0.1.0"
"uuid" = { version = "0.8", features = ["v4"] }
"itertools" = "0.10"
chrono = "0.4.22"
futures = "0.3.24"
