[package]
name = "sofie-rust-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"uuid" = { version = "0.8", features = ["v4"] }
"itertools" = "0.10"
chrono = "0.4.22"
futures = "0.3.24"
mongodb = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }

