[package]
name = "sofie-rust-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"itertools" = "0.10"
chrono = { version = "0.4.22", features = ["serde"] }
futures = "0.3"
mongodb = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
serde_with = { version = "2.1.0", features = ["chrono_0_4"] }
nanoid = "0.4.0"
ordered-float = "3.4.0"
serde_repr = "0.1.10"

